--- a/tp2/index.html
+++ b/tp2/index.html
@@ -23,6 +23,9 @@
     <div id="canvas"></div>
     <div id="camera"></div>
     <script type="module" src="main.js"></script>
+    <video style="display:none" id="video" autoplay muted="false" preload="auto" width="640" height="264" >
+
+    </video> 
 </body>
 
 </html>
