added video play button

--- a/tp2/index.html
+++ b/tp2/index.html
@@ -23,7 +23,7 @@
     <div id="canvas"></div>
     <div id="camera"></div>
     <script type="module" src="main.js"></script>
-    <video style="display:none" id="video" autoplay muted="false" preload="auto" width="640" height="264" >
+    <video style="display:none" id="video" preload="auto" width="640" height="264" >
 
     </video> 
 </body>
