--- a/tp2/index.html
+++ b/tp2/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>SGI Hello world TP1</title>
+    <title>SGI TP2 - Christmas Time!</title>
 
     <link rel="shortcut icon" href="image/favicon/3d.png" />
     <link rel="stylesheet" href="styles.css">
@@ -23,9 +23,7 @@
     <div id="canvas"></div>
     <div id="camera"></div>
     <script type="module" src="main.js"></script>
-    <video style="display:none" id="video" preload="auto" width="640" height="264" >
-
-    </video> 
+    <video style="display:none" id="video" preload="auto" width="640" height="264" ></video> 
 </body>
 
 </html>
